fix html,css, js

--- a/src/index.html
+++ b/src/index.html
@@ -39,6 +39,8 @@
 
     <ul class="gallery"></ul>
 
+    <button id="load-more-btn" class="hidden">Load more</button>
+
     <script type="module" src="./main.js"></script>
   </body>
 </html>
